# CS4414Demo

./: .gitignore  Makefile  README.md  example.cpp  example.h  main.cpp  numberQueue.h
Recitation11/: atomic  atomic_example.cpp  hello  hello_function_lambda.cpp  hello_function_mem.cpp  hello_function_obj.cpp  hello_function_ptr.cpp  hello_join.cpp  race  race_condition.cpp  shared_lock.cpp  vector_mutex.cpp  vectorthread_join.cpp
Recitation13/: async  async.cpp  condition_variale.cpp  cv  demo_promise_future.cpp  dpf  exception_promise_future.cpp  notify_one.cpp  promise_future  promise_future.cpp  wait.cpp
Recitation3/: numberQueue.cpp
Recitation5/: a.out  fun  pointers  pointers.cpp  returnArray.cpp  returnPointer.cpp  returnVector.cpp  stackheap.cpp  vect  vectorPointers.cpp
Recitation7/: class  class1  class1_template.cpp  class2_template.cpp  const  const 2  const_example.cpp  func_template.cpp
Recitation9/BasicCMake/: CMakeLists.txt  main.cpp
Recitation9/GprofExample/: ve  vectorExample.cpp
Recitation9/LibraryCMake/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
Recitation9/SubDirCMake/: CMakeLists.txt
Recitation9/SubDirCMake/hello-exe/: CMakeLists.txt  main.cpp
Recitation9/SubDirCMake/say-hello/: CMakeLists.txt
Recitation9/traffic_simulator/controller/: traffic_controller.hpp
recitation1/: address.cpp  pointer.cpp  reference.cpp  size.cpp  vector_example.cpp
recitation10/: alloc_concurrent.cpp  concurrent_read.cpp  read_write_diff_element.cpp
recitation11/: README.md  dependencies.sh  lock.cpp
recitation11/encoder/: CMakeLists.txt  compile.sh  embedding_example.cpp  encode.py
recitation2/: array.cpp  func_ret  function_param.cpp  function_return_pointer.cpp  function_return_ref.cpp  memory_leak.cpp  reference.cpp
recitation2/class/: main.cpp  rectangle.cpp
recitation3/: exampleVector.cpp  memory_leak.cpp  shared_ptr.cpp  subtract.cpp  valgrind_cmd.sh  vector_alloc.cpp
recitation3/QA/: A.cpp  A.hpp  B.cpp  B.hpp  compileAB.sh  main.cpp  test.cpp
recitation3/class/: main.cpp  rectangle.cpp
recitation4/: arr_bound_check.cpp  ref_func.cpp  resource_leak.cpp  shared_ptr_example.cpp  unique_ptr_example.cpp
recitation4/class/: main.cpp  rectangle.cpp  rectangle.hpp
recitation5/: exampleVector.cpp  fast_code.cpp  incr.cpp  myVector.hpp  resource_leak.cpp  slow_code.cpp  static.cpp  thread_example.cpp
recitation5/class/: main.cpp  rectangle.hpp
recitation6/: condition_rwlock.cpp  lock_rw_simple.cpp
recitation8/CMyProject0/: CMakeLists.txt  main.cpp
recitation8/CMyProject1/: CMakeLists.txt
recitation8/CMyProject1/include/: hello.hpp
recitation8/CMyProject1/src/: hello.cpp
recitation8/MyProject0/: Makefile  hello.cpp
recitation8/MyProject1/: Makefile  hello.cpp
recitation8/gprof_exp/: Makefile  full_matrix_mult.cpp  generate_profile.sh  mmx_matrix_mult.cpp  notb_matrix_mult.cpp  opt_matrix_mult.cpp  slow_matrix_mult.cpp
recitation9/: README.md  free_func.cpp  functor.cpp  increment.cpp  lambda.cpp  leak_with_destructor_example.cpp  map_rac_example.cpp  mem_func.cpp  ref_func.cpp  resource_leak.cpp
recitation9-CS5416/: batching.py  gpu-vs-cpu.py
recitation9/llama_example/: CMakeLists.txt  compile.sh  get_tiny_model.sh
